--- a/src/styles/_hero.scss
+++ b/src/styles/_hero.scss
@@ -71,6 +71,9 @@ header {
         flex-direction: column;
         align-items: center;
         justify-content: center;
+        @media (min-width: 658px) {
+            margin-top: 100px;
+        }
         P {
             margin-block-start: 0 !important;
             margin-block-end: 0 !important;
@@ -78,6 +81,7 @@ header {
             text-align: center;
             font-size: 22px;
             padding: 7px;
+            margin-bottom: 5px;
             font-family: 'Comfortaa', cursive;
             font-weight: 600;
             // position: absolute;
@@ -89,10 +93,14 @@ header {
             }
         }
         span {
-            @include flexCenter(column);
+            // @include flexCenter(column);
             text-align: center;
         }
-        span {
+        span.__highlighted, a.__highlighted {
+            color: $primary-txt;
+            text-decoration: none;
+        }
+        span.hero__highlighted {
             margin: 30px;
             font-size: 20px;
             transition-property: font-style;
