--- a/src/styles/_projects.scss
+++ b/src/styles/_projects.scss
@@ -21,6 +21,7 @@
         margin-top: 40px;
         width: 20%;
         border: 0;
+        transform: skewY(-4deg);
         height: 1px;
         background-image: linear-gradient(to right, rgba(255, 255, 255, 0), #95b2b8, rgba(255, 255, 255, 0));
     }
